blog name changed

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Data Science Blog - Cheng
+title: Cheng's Data Science Blog
 description: A place to share interesting data science projects
 github_username: ChengHsu
 # you can comment the below line out if your repo name is not different than your baseurl
